--- a/wp-content/themes/my-theme/assets/scss/_mixins.scss
+++ b/wp-content/themes/my-theme/assets/scss/_mixins.scss
@@ -58,6 +58,18 @@ TOOLS
 	overflow: hidden;
 }
 
+// CLEARFIX
+@mixin clearfix() {
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+}
+
 
 /*********************
 COLORS
